// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab renders correctly when active 1`] = `
<li
  aria-disabled={false}
  aria-selected={true}
  className="tab--wrapper active"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  />
</li>
`;

exports[`Tab renders correctly when disabled 1`] = `
<li
  aria-disabled={true}
  aria-selected={false}
  className="tab--wrapper disabled"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  />
</li>
`;

exports[`Tab renders correctly when focus 1`] = `
<li
  aria-disabled={false}
  aria-selected={false}
  className="tab--wrapper tab-focus-visible-inset"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  />
</li>
`;

exports[`Tab renders correctly when focus and active 1`] = `
<li
  aria-disabled={false}
  aria-selected={true}
  className="tab--wrapper active tab-focus-visible-inset"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  />
</li>
`;

exports[`Tab renders correctly with className 1`] = `
<li
  aria-disabled={false}
  aria-selected={false}
  className="tab--wrapper test"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  >
    Tab
  </a>
</li>
`;

exports[`Tab renders correctly with empty props 1`] = `
<li
  aria-disabled={false}
  aria-selected={false}
  className="tab--wrapper"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  />
</li>
`;

exports[`Tab renders correctly with icon on left 1`] = `
<li
  aria-disabled={false}
  aria-selected={false}
  className="tab--wrapper"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  >
    <svg
      aria-hidden={true}
      className="icon_component tab-icon left icon_component--no-focus-style"
      fill="currentColor"
      height="18"
      onClick={[Function]}
      viewBox="0 0 20 20"
      width="18"
    >
      <path
        clipRule="evenodd"
        d="M3 4.25C2.58579 4.25 2.25 4.58579 2.25 5V15C2.25 15.4142 2.58579 15.75 3 15.75H17C17.4142 15.75 17.75 15.4142 17.75 15V5C17.75 4.58579 17.4142 4.25 17 4.25H3ZM3.75 6.71589V14.25H16.25V6.71591L11.802 10.1371C11.2854 10.5346 10.6518 10.75 10 10.75C9.3482 10.75 8.71468 10.5346 8.19805 10.1371L3.75 6.71589ZM15.0455 5.75H4.95456L9.1126 8.94818L9.11265 8.94821C9.36706 9.14393 9.67903 9.25004 10 9.25004C10.321 9.25004 10.633 9.14393 10.8874 8.94821L10.8874 8.94818L15.0455 5.75Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
    T
    a
    b
  </a>
</li>
`;

exports[`Tab renders correctly with icon on right 1`] = `
<li
  aria-disabled={false}
  aria-selected={false}
  className="tab--wrapper"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  >
    T
    a
    b
    <svg
      aria-hidden={true}
      className="icon_component tab-icon right icon_component--no-focus-style"
      fill="currentColor"
      height="18"
      onClick={[Function]}
      viewBox="0 0 20 20"
      width="18"
    >
      <path
        clipRule="evenodd"
        d="M3 4.25C2.58579 4.25 2.25 4.58579 2.25 5V15C2.25 15.4142 2.58579 15.75 3 15.75H17C17.4142 15.75 17.75 15.4142 17.75 15V5C17.75 4.58579 17.4142 4.25 17 4.25H3ZM3.75 6.71589V14.25H16.25V6.71591L11.802 10.1371C11.2854 10.5346 10.6518 10.75 10 10.75C9.3482 10.75 8.71468 10.5346 8.19805 10.1371L3.75 6.71589ZM15.0455 5.75H4.95456L9.1126 8.94818L9.11265 8.94821C9.36706 9.14393 9.67903 9.25004 10 9.25004C10.321 9.25004 10.633 9.14393 10.8874 8.94821L10.8874 8.94818L15.0455 5.75Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </a>
</li>
`;

exports[`Tab renders correctly with id 1`] = `
<li
  aria-disabled={false}
  aria-selected={false}
  className="tab--wrapper"
  id="test"
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  >
    Tab
  </a>
</li>
`;

exports[`Tab renders correctly with value 1`] = `
<li
  aria-disabled={false}
  aria-selected={false}
  className="tab--wrapper"
  id=""
  role="tab"
>
  <a
    className="tab-inner"
    onClick={[Function]}
  >
    Tab
  </a>
</li>
`;
